--- a/src/styles/containers/CVPage/_CVPage.scss
+++ b/src/styles/containers/CVPage/_CVPage.scss
@@ -8,6 +8,10 @@
     border-top: 1px solid black;
     padding: $main-spacing 0;
 
+    &-about {
+      line-height: 180%;
+    }
+
     &__list {
       padding: 0;
 
@@ -33,13 +37,8 @@
 
         &-skillName {
           display: inline-block;
-          width: 180px;
           font-weight: 600;
-          padding-right: $main-spacing;
-        }
-
-        &-knowlage {
-          padding-left: $main-spacing;
+          // padding-right: $main-spacing;
         }
       }
     }
