--- a/src/styles/containers/Projects/Project/_Project.scss
+++ b/src/styles/containers/Projects/Project/_Project.scss
@@ -21,6 +21,10 @@
       font-weight: 500;
     }
 
+    &-text {
+      line-height: 140%;
+    }
+
     &-technologies {
       width: 100%;
       display: flex;
